--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "^5.0.1",
     "eslint": "^3.17.1",
     "eslint-config-react-app": "^1.0.4",
+    "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.0",
